Fix blog titles formatting poorly on mobile

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -7,8 +7,8 @@ article.post {
 
     h1 {
       font-size: 3em;
-      margin-bottom: .5em;
-      line-height: 0;
+      margin-bottom: 0;
+      line-height: 1;
     }
 
     p.post-date {
